--- a/src/components/layout/_Layout.styles.scss
+++ b/src/components/layout/_Layout.styles.scss
@@ -1,25 +1,45 @@
-
+@import 'styles/styles';
 
 .wapper-nav {
   height: 3rem;
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color:#ffff00;
+  background-color:$primaratyColor;
 }
 .container-search {
-  width: 100%;
-  max-width: 1240px;
-  background-color: transparent;
-
+  display: flex;
+  align-items:center;
   &__box{
-    width: 60%;
-    height: 75%;
+    width: 85%;
+    display: flex;
+    margin: auto;
+    &__input-search{
+      width:93%;
+      height: 35px;
+    }
+    &__image-container{
+      width: 35px;
+      height: 35px;
+    }
+    &__image{
+      width: 25px;
+      display: flex;
+      justify-content: center;
+    }
   }
+
   &__img{
-    width: 20%;
+    width: 50px;
+    height: 40px;
+   
   }
+
 }
 .wapper-layout{
- 
+ background-color: $gray_600;
+}
+
+.container-info-layout{
+  height: 100vh;
 }
